[package]
name = "wasm-tac-toe"
version = "0.1.0"
authors = ["Jukka Hopeavuori <jukka.hopea@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "git@github.com:jukkhop/wasm-tac-toe.git"
description = "WebAssembly tac-toe experiment"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.25"
wasm-bindgen = "0.2.48"
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.web-sys]
version = "0.3.25"
features = [
  'Attr',
  'CanvasRenderingContext2d',
  'console',
  'Document',
  'DomTokenList',
  'Element',
  'HtmlCanvasElement',
  'HtmlElement',
  'NamedNodeMap',
  'Node',
  'NodeList',
  'Window',
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[dev-dependencies]
wasm-bindgen-test = "0.2.48"