[package]
authors = ["Jukka Hopeavuori <jukka.hopea@gmail.com>"]
description = "Canvas experiment with Rust & WebAssembly"
edition = "2018"
license = "MIT"
name = "wasm-tac-toe"
repository = "git@github.com:jukkhop/wasm-tac-toe.git"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.25"
queues = "1.0.2"
wasm-bindgen = "0.2.48"
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.web-sys]
version = "0.3.25"
features = [
  'Attr',
  'CanvasRenderingContext2d',
  'console',
  'Document',
  'DomTokenList',
  'Element',
  'HtmlCanvasElement',
  'HtmlElement',
  'NamedNodeMap',
  'Node',
  'NodeList',
  'Window',
  'Performance',
  'PerformanceTiming',
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[dev-dependencies]
wasm-bindgen-test = "0.2.48"